public/index.css
body {
    margin: 0;
    background-color: #FFC72C;
  }


.main{
    padding: 5%;
    text-align: center;
    margin: auto;
    font-family: Arial, Helvetica, sans-serif;  

}

.trackerBox{
  margin-bottom: 30px;
}

.leaderBox{
  border: 2px black solid;
}
/* The Modal */

.modal-button{
    font-size: 20px;
}

.modal { /*Modal Background*/
    display: none; /* Hidden by default */
    position: fixed; 
    z-index: 1;
    padding-top: 5%; 
    left: 0;
    top: 0;
    width: 100%; 
    height: 100%; 
    overflow: auto; /* Enable scroll if needed */
    background-color: rgba(0,0,0,0.4); 
    font-size: 50px;
  }
  
  .modal-content {
    background-color: #f9f5f5;
    margin: auto;
    padding: 3%;
    border: 2px solid #DA291C;
    border-radius: 5%;
    width: 70%;
  }
  
  input{
    font-size: 20px;
  }

  .modal-button{
    background-color:#DA291C;
    padding: 3%;
  }

  /* The Close Button of Modal*/
  .close {
    color: #aaaaaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: #DA291C;
    text-decoration: none;
    cursor: pointer;
  }

  .text-modal{
      color:black;
      font-size: 20px;
  }

  .submit {
    color: #aaaaaa;
    font-size: 20px;
    color: black;
    border: 1px solid #888;
    padding: 3%;
  }

  .table1{
    text-align: center;
    margin: auto;
    font-size: 20px;
    border-spacing: 15%;
    padding-bottom: 20px;
  }

  th, td {
    padding: 20px;
    border: solid black ;
  }

